# toolbox

./: .gitignore  LICENSE  README.md
.pyre/: pyre.stderr
code_review/: Semantic_Reviews.md
code_review/branch-review-skill/: README.md  SKILL.md  branch-review.mdc
code_review/constraints/: README.md
code_review/pr-review-skill/: README.md  SKILL.md  pr-review.mdc
design/: FailFast.md  README.md  SOLIDvsCUPID.md
design/concepts/: Domain.md  FailFast.md  MLStack.md  MachinesAtFault.md  Optionality.md  Orthogonality.md  SOLIDvsCUPID.md  StrategicVagueness.md
design/patterns/: API_Design.md  Cpp_Strategy.md  DDD_In_Practice.md  MLStack.md
dictionary/: README.md
refactoring/: Atomic_Change.md  CodeDuplicationIsNotBad.md  CodeDuplicationIsNotBad2.md  README.md
refactoring/atomic_change/: Booleans.md  Classes.md  Common_Easy_Fixes.md  Functions.md  If_Conditions.md  README.md  Renaming.md
strong_opinions/: README.md
strong_opinions/AI/: BlackBoxGospel.md  CodeIsTheLanguage.md  EmbodiedMirror.md  GenericDomain.md
tools/: README.md
tools/.pyre/: pyre.stderr
tools/c4viz/: README.md  c4_container_schema.json  generate_graphviz.go  go.mod  main.go
tools/nix_uv_app/: README.md  flake.nix
tools/tell/: .gitignore  README.md  flake.nix  pyproject.toml  tell.py  tell.sh
tools/tldrgen/: README.md  explaincmd.py  explaincmd.sh  gencmd.py  gencmd.sh  pyproject.toml  tldrgen.py  tldrgen.sh
tools/viz_c4/: .gitignore  c4_container_schema.json  c4parser.go  flake.nix  generate_graphviz.go  go.mod  graphviz.go  index.html  main.go
tutorials/: README.md
(+22 files in other folders)
