[project]
name = "tell"
version = "0.1.0"
description = "CLI tool to help with cli tool usage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.8",
    "langchain-ollama>=1.0.1",
]
[project.scripts]
tell = "tell:main"

[build-system]
requires = ["setuptools>=61.0"] # Or "hatchling" if you use Hatch
build-backend = "setuptools.build_meta" # Or "hatchling.build_meta"
